Create CommentController class